fixed overflowed header image

--- a/page_css.css
+++ b/page_css.css
@@ -17,10 +17,17 @@ body {
 
 #header-image-container {
     width: 90%;
-    display: flex;
+    text-align: center;
     margin: auto;
     padding-top: 20px;
     padding-bottom: 20px;
+}
+
+.header-image {
+    max-width: 100%;
+    max-height: auto;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .menu {
